--- a/src/components/login/loginForm.css
+++ b/src/components/login/loginForm.css
@@ -1,3 +1,20 @@
+html, body {
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+
+
+.center-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+
 .login-page {
   height: 100vh;
   justify-content: center;
@@ -5,16 +22,16 @@
   flex-direction: column;
 }
 
-.Input label {
+label {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 1.3rem;
 }
 
-.Input input {
+input {
   width: 100%;
-  border-radius: 9px;
-  border-color: #595757;
+  border-radius: 92px;
+  border-color: #ccc;
 }
 
 .Link {
